# oecd_ai_visibility

./: .env.example  .gitignore  AGENTS.md  ANALYTICAL_REPORT.md  METHODOLOGY.md  PHASE_5_5_JUDGE_VALIDATION_PLAN.md  PORTFOLIO_CASE_STUDY.md  PROJECT_BRIEF.md  README.md  VISUAL_GALLERY.md  pyproject.toml
config/: study.yaml
data/: queries.yaml
data/fixtures/: dry_run_responses.yaml
data/raw/: anthropic__claude-sonnet-4-6__authority_ai_policy__0.json  anthropic__claude-sonnet-4-6__authority_anti_bribery__0.json  anthropic__claude-sonnet-4-6__authority_development_cooperation__0.json  anthropic__claude-sonnet-4-6__authority_education_data__0.json  anthropic__claude-sonnet-4-6__authority_tax_standards__0.json  anthropic__claude-sonnet-4-6__compare_development_policy__0.json  anthropic__claude-sonnet-4-6__compare_economic_advice__0.json  anthropic__claude-sonnet-4-6__compare_global_risks__0.json  anthropic__claude-sonnet-4-6__compare_labour_policy__0.json  anthropic__claude-sonnet-4-6__compare_statistics_europe__0.json  anthropic__claude-sonnet-4-6__data_aid_flows__0.json  anthropic__claude-sonnet-4-6__data_education_performance__0.json  anthropic__claude-sonnet-4-6__data_health_spending__0.json  anthropic__claude-sonnet-4-6__data_income_inequality_trends__0.json  anthropic__claude-sonnet-4-6__data_rd_spending__0.json  anthropic__claude-sonnet-4-6__data_tax_revenue__0.json  anthropic__claude-sonnet-4-6__geo_citable_sources_ai_governance__0.json  (+73 more)
tests/: test_analysis.py  test_cli.py  test_figures.py  test_runner.py  test_schemas.py  test_scoring.py  test_validation.py
(+124 files in other folders)
